fixed-text-align

--- a/css/input.css
+++ b/css/input.css
@@ -21,7 +21,7 @@ html {
 }
 
 body {
-  @apply font-primary text-[18px] font-normal;
+  @apply font-primary text-[15px] lg:text-[18px] font-normal;
 }
 
 a {
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .h2 {
-  @apply text-[45px] leading-tight;
+  @apply text-[40px] leading-tight;
 }
 
 .h4 {
@@ -49,7 +49,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .btn {
-  @apply h-[75px] px-[30px] transition-all duration-300 text-white rounded-[18px] flex items-center gap-2;
+  @apply h-[65px] lg:h-[75px] px-[25px] lg:px-[30px] transition-all duration-300 text-white rounded-[18px] flex items-center gap-2;
 }
 
 .btn-primary {
